--- a/lawding_flutter/pubspec.yaml
+++ b/lawding_flutter/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   firebase_core: ^4.3.0
   firebase_analytics: ^12.1.0
   firebase_crashlytics: ^5.0.6
+  dio: ^5.9.0
+  dartz: ^0.10.1
+  pretty_dio_logger: ^1.4.0
 
 dev_dependencies:
   flutter_test:
