--- a/lawding_flutter/pubspec.yaml
+++ b/lawding_flutter/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_crashlytics: ^5.0.6
   dio: ^5.9.0
   flutter_dotenv: ^6.0.0
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
