--- a/lawding_flutter/analysis_options.yaml
+++ b/lawding_flutter/analysis_options.yaml
@@ -10,19 +10,47 @@
 include: package:flutter_lints/flutter.yaml
 
 linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at https://dart.dev/lints.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
+  # Flutter 공식 권장 린트 규칙 + 추가 엄격한 규칙
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    # 스타일 가이드 준수
+    prefer_single_quotes: true
+    prefer_const_constructors: true
+    prefer_const_declarations: true
+    prefer_const_literals_to_create_immutables: true
+
+    # 코드 품질
+    avoid_print: true
+    avoid_unnecessary_containers: true
+    avoid_empty_else: true
+    avoid_relative_lib_imports: true
+    prefer_relative_imports: true
+
+    # 명명 규칙
+    camel_case_types: true
+    camel_case_extensions: true
+    file_names: true
+    non_constant_identifier_names: true
+    constant_identifier_names: true
+
+    # 주석 및 문서화
+    slash_for_doc_comments: true
+
+    # 불필요한 코드 제거
+    unnecessary_brace_in_string_interps: true
+    unnecessary_getters_setters: true
+    unnecessary_lambdas: true
+    unnecessary_new: true
+    unnecessary_null_aware_assignments: true
+    unnecessary_null_in_if_null_operators: true
+    unnecessary_overrides: true
+    unnecessary_parenthesis: true
+    unnecessary_this: true
+
+    # 안전성
+    always_use_package_imports: false
+    prefer_final_fields: true
+    prefer_final_locals: true
+    prefer_final_in_for_each: true
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
