--- a/lawding_flutter/pubspec.yaml
+++ b/lawding_flutter/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_dotenv: ^6.0.0
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
+  webview_flutter: ^4.11.1
 
 dev_dependencies:
   flutter_test:
