--- a/lawding_flutter/android/app/src/main/AndroidManifest.xml
+++ b/lawding_flutter/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="lawding_flutter"
+        android:label="연차계산기"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
