--- a/lawding_flutter/pubspec.yaml
+++ b/lawding_flutter/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   riverpod_annotation: ^2.6.1
   webview_flutter: ^4.11.1
   flutter_launcher_icons: ^0.14.2
+  package_info_plus: ^8.1.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
